--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-hotkeys-hook": "^5.1.0",
     "reagraph": "^4.30.5",
     "sonner": "^2.0.7",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
